[gd_scene load_steps=7 format=3 uid="uid://7qlcvxsvyst5"]

[ext_resource type="Texture2D" uid="uid://6syojrialhd0" path="res://assets/inventory/items/lemonade.png" id="1_03ey0"]
[ext_resource type="Script" path="res://scripts/lemonade_interaction.gd" id="2_llt6y"]
[ext_resource type="Texture2D" uid="uid://beh4pnr72b2sx" path="res://assets/blank_frame_bigger.png" id="3_7613i"]
[ext_resource type="FontFile" uid="uid://b5lqlis8c3a4k" path="res://assets/I-pixel-u.ttf" id="4_4u3ex"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vu4in"]
size = Vector2(64, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cjio3"]
size = Vector2(76.5, 42)

[node name="StaticBody2D" type="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15.5)
shape = SubResource("RectangleShape2D_vu4in")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_03ey0")

[node name="interaction" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource("2_llt6y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction"]
position = Vector2(0.75, -16)
shape = SubResource("RectangleShape2D_cjio3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="BlankFrameBigger" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(578, 524)
scale = Vector2(4, 3.01563)
texture = ExtResource("3_7613i")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/BlankFrameBigger"]
offset_left = -126.0
offset_top = -30.0
offset_right = 126.0
offset_bottom = 30.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer/BlankFrameBigger"]
offset_left = -122.0
offset_top = -25.8652
offset_right = -17.0
offset_bottom = -14.8652
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("4_4u3ex")
theme_override_font_sizes/font_size = 8

[connection signal="area_entered" from="interaction" to="interaction" method="_on_area_entered"]
[connection signal="area_exited" from="interaction" to="interaction" method="_on_area_exited"]
